--- a/AqoursFirstLive.html
+++ b/AqoursFirstLive.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[Puella] Akiba's Trip The Animation | Archive</title>
+		<title>[Puella] Aqours 1st Live ~Step ZERO to ONE~ | Archive</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,20 +23,25 @@
 								<ul class="actions">
 								<li><a href="index.html" class="button scrolly"><< Menu Utama</a>
 							</ul>
-									<align="left"><h2>Akiba's Trip The Animation - TV [Subtitle Indonesia]</h2>
+									<align="left"><h2>Aqours 1st Live ~Step! ZERO to ONE~</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
-											<img border="0" height="316" src="images/83185.jpg" width="225" />
+											<img border="0" height="316" src="images/1stlive.png" />
 										</div>
 									
 									<hr width="100%">
 									<ul class="actions">
-										<center><li><a class="button">Episode - 1</a></li>
+										<center><li><a class="button">DAY 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL - 1 (NOT AVAILABLE YET)</a>
-										<a href="#" class="button"> Torrent (NOT AVAILABLE YET)</a> 
-										<a href="#" class="button"> DDL - 2 (NOT AVAILABLE YET)</a>
+										<a href="https://www.dropbox.com/s/yorha4p6cnupphq/%5B2017.02.25%5D%20Aqours%20First%20love%20live%20day1%20SNG%20%5B1080%5D.ts" class="button"> DDL</a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">DAY 2</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="https://www.dropbox.com/s/xyzw0osm8mnyvsf/%5B2017.02.26%5D%20Aqours%20First%20love%20live%20DAY2%20SNG%20%5B1080i%5D.ts" class="button"> DDL</a>
                     </p></li></center>
 									</ul>
 									<!-- <ul class="actions">
