--- a/Akiba2017.html
+++ b/Akiba2017.html
@@ -16,7 +16,7 @@
 	<body>
 <!-- One -->
 				
-					<section id="DC2016-OC9.html" class="wrapper style2 spotlights">
+					<section id="Akiba2017.html" class="wrapper style2 spotlights">
 						<section>
 							<div class="content">
 								<div class="inner">
