--- a/Winter2017.html
+++ b/Winter2017.html
@@ -51,8 +51,8 @@
 							<ul class="actions">
 								<li>
 								<a href="http://puella.god.jp/FGO2017.html" a class="button scrolly">Fate Grand Order - First Order</a>
-								<a href="http://puella.god.jp/Akiba2017.html" a class="button scrolly">Akiba's Trip The Animation</a></li>
-								<a href="http://puella.god.jp/AqoursFirstLive.html" a class="button scrolly">Aqours First Live</a></li>
+								<a href="http://puella.god.jp/Akiba2017.html" a class="button scrolly">Akiba's Trip The Animation</a></li><a href="http://puella.god.jp/DC2017-GDOut.html" a class="button scrolly">Gabriel DropOut</a></li>
+								<a href="http://puella.god.jp/AqoursFirstLive.html" a class="button scrolly">Aqours 1st Live</a></li>
 							</ul>
 						</div>
 					</section>
