--- a/DC2016-OC9.html
+++ b/DC2016-OC9.html
@@ -39,6 +39,23 @@
 										<a href="https://www.solidfiles.com/v/33Lvq8QQKn8wd" class="button"> DDL - 2 </a>
                     </p></li></center>
 									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 2</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="http://ddl.shirosubs.xyz/Occultic%3b%20Nine/%5bPuella-Shiro%5d%20Occultic%3b%20Nine%20-%2002%20%5bB9819F79%5d.mkv" class="button"> DDL - 1 </a>
+										<a href="https://www.nyaa.se/?page=view&tid=863418" class="button"> Torrent </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 3</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="https://drive.google.com/open?id=0B8BNBtd_4hzSZHczUldHMmFwdXc" class="button"> DDL - 1 </a>
+										<a href="#" class="button"> Torrent </a> 
+										<a href="#" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
 									<!-- <ul class="actions">
 										<center><li><a class="button">Episode - 2</a></li>
 										<br><br>
