--- a/DC2016-OC9.html
+++ b/DC2016-OC9.html
@@ -52,6 +52,96 @@
 										<br><br>
 										<p style="line-height: 0.02em;">
 										<a href="https://drive.google.com/open?id=0B8BNBtd_4hzSZHczUldHMmFwdXc" class="button"> DDL - 1 </a>
+										<a href="https://www.nyaa.se/?page=view&tid=914928" class="button"> Torrent </a> 
+										<a href="http://kbagi.com/vengeance455/puella-shiro-occulticnine-533622/puella-shiro-occultic-nine-03-16f8da83,4092449,gallery,1,1.mkv" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 4</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="#" class="button"> DDL - 1 </a>
+										<a href="#" class="button"> Torrent </a> 
+										<a href="#" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 5</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="#" class="button"> DDL - 1 </a>
+										<a href="#" class="button"> Torrent </a> 
+										<a href="#" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 6</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="#" class="button"> DDL - 1 </a>
+										<a href="#" class="button"> Torrent </a> 
+										<a href="#" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 7</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="#" class="button"> DDL - 1 </a>
+										<a href="#" class="button"> Torrent </a> 
+										<a href="#" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 8</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="#" class="button"> DDL - 1 </a>
+										<a href="#" class="button"> Torrent </a> 
+										<a href="#" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 9</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="#" class="button"> DDL - 1 </a>
+										<a href="#" class="button"> Torrent </a> 
+										<a href="#" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 10</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="#" class="button"> DDL - 1 </a>
+										<a href="#" class="button"> Torrent </a> 
+										<a href="#" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 11</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="#" class="button"> DDL - 1 </a>
+										<a href="#" class="button"> Torrent </a> 
+										<a href="#" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 12</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="#" class="button"> DDL - 1 </a>
+										<a href="#" class="button"> Torrent </a> 
+										<a href="#" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 13</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="#" class="button"> DDL - 1 </a>
 										<a href="#" class="button"> Torrent </a> 
 										<a href="#" class="button"> DDL - 2 </a>
                     </p></li></center>
