--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 										</div>
 							<br>
 							<ul class="actions">
-								<li><a href="http://puellasubs.com/" class="button scrolly" target="_blank">Mainsite</a>
-								<a href="http://puellasubs.xyz/" class="button scrolly" target="_blank">Secondary site</a>
+								<li>
+								<#a href="http://puellasubs.com/" class="button scrolly" target="_blank">Mainsite</a>
+								<#a href="http://puellasubs.xyz/" class="button scrolly" target="_blank">Secondary site</a>
 								<a href="http://qchat.rizon.net/?channels=Puellasubs&uio=d4" class="button scrolly">#Puellasubs@irc.rizon.net</a>
 								<a href="Fall2016.html" class="button scrolly">Fall 2016 - Archive</a>
 								<a href="Winter2017.html" class="button scrolly">Winter 2017 - Archive</a>
+								<a href="Summer2017.html" class="button scrolly">Summer 2017 - Archive</a>
 								</li>
 							</ul>
 							<!-- <center><style type="text/css">
