--- a/NetsuzouTRap.html
+++ b/NetsuzouTRap.html
@@ -26,7 +26,7 @@
 									<align="left"><h2>Netsuzou TRap Subtitle Indonesia</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
-											<img border="0" src="images/82651.jpg" />
+											<img border="0" src="https://myanimelist.cdn-dena.com/images/anime/6/85782l.jpg" />
 										</div>
 									
 									<hr width="100%">
