--- a/HajimeteNoGal.html
+++ b/HajimeteNoGal.html
@@ -26,7 +26,7 @@
 									<align="left"><h2>Hajimete no Gal Subtitle Indonesia</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
-											<img border="0" src="images/82651.jpg" />
+											<img border="0" src="https://myanimelist.cdn-dena.com/images/anime/3/84417l.jpg" />
 										</div>
 									
 									<hr width="100%">
