--- a/NewGameS2.html
+++ b/NewGameS2.html
@@ -26,7 +26,7 @@
 									<align="left"><h2>New Game!! Season 2 Subtitle Indonesia</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
-											<img border="0" src="images/82651.jpg" />
+											<img border="0" src="https://myanimelist.cdn-dena.com/images/anime/4/85103l.jpg" />
 										</div>
 									
 									<hr width="100%">
