--- a/Summer2017.html
+++ b/Summer2017.html
@@ -21,7 +21,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#">Status Rilisan <br>- Winter 2017</a></li>
+							<li><a href="#">Status Rilisan <br>- Summer 2017</a></li>
 							<li><a href="#">Hajimete no Gal</a></li>
 							<li><a href="#">New Game!! Season 2</a></li>
 							<li><a href="#">Netsuzou TRap</a></li>
