--- a/NetsuzouTRap.html
+++ b/NetsuzouTRap.html
@@ -33,77 +33,56 @@
 									<ul class="actions">
 										<center>
 										<li><a class="button">Episode - 1</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										<!-- <a href="#" class="button"> DDL </a>
+										<a href="#" class="button"> Torrent </a> -->
+										</p></li>
 										<li><a class="button">Episode - 2</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
 										<li><a class="button">Episode - 3</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
 										<li><a class="button">Episode - 4</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
 										<li><a class="button">Episode - 5</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
 										<li><a class="button">Episode - 6</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
 										<li><a class="button">Episode - 7</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
 										<li><a class="button">Episode - 8</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
 										<li><a class="button">Episode - 9</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
 										<li><a class="button">Episode - 10</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
 										<li><a class="button">Episode - 11</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
 										<li><a class="button">Episode - 12</a></li>
-										<br><br>
+										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a>
-										</p></li></center>
+										</p></li>
+										</center>
 									</ul>
 								</div>
 							</div>
