--- a/NewGameS2.html
+++ b/NewGameS2.html
@@ -22,6 +22,7 @@
 								<div class="inner">
 								<ul class="actions">
 								<li><a href="index.html" class="button scrolly"><< Menu Utama</a>
+									<a href="Summer2017.html" class="button scrolly"><< Summer 2017</a>
 							</ul>
 									<align="left"><h2>New Game!! Season 2 Subtitle Indonesia</h2>
 									<br>
