--- a/Summer2017.html
+++ b/Summer2017.html
@@ -23,8 +23,8 @@
 						<ul>
 							<li><a href="#">Status Rilisan <br>- Summer 2017</a></li>
 							<li><a href="#">Hajimete no Gal</a></li>
-							<li><a href="#">New Game!! Season 2</a></li>
 							<li><a href="#">Netsuzou TRap</a></li>
+							<li><a href="#">New Game!! Season 2</a></li>
 						</ul>
 					</nav>
 										<li>	
@@ -52,8 +52,8 @@
 							<ul class="actions">
 								<li>
 								<a href="http://puella.god.jp/HajimeteNoGal.html" a class="button scrolly">Hajimete No Gal</a>
+								<a href="http://puella.god.jp/NetsuzouTRap.html" a class="button scrolly">Netsuzou TRap</a>
 								<a href="http://puella.god.jp/NewGameS2.html" a class="button scrolly">New Game!! Season 2</a></li>
-								<a href="http://puella.god.jp/NetsuzouTRap.html" a class="button scrolly">Netsuzou TRap</a></li>
 							</ul>
 						</div>
 					</section>
