--- a/netsuzou-trap.html
+++ b/netsuzou-trap.html
@@ -27,7 +27,7 @@
 									<align="left"><h2>Netsuzou TRap Subtitle Indonesia</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
-											<img border="0" src="https://myanimelist.cdn-dena.com/images/anime/6/85782l.jpg" />
+											<img border="0" src="https://myanimelist.cdn-dena.com/images/anime/7/86668l.jpg" />
 										</div>
 									
 									<hr width="100%">
@@ -36,10 +36,12 @@
 										<li><a class="button">Episode - 1</a></li>
 										<br>
 										<p style="line-height: 0.02em;">
-										<!-- <a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a> -->
+										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8WlBsVEJBUHJTN0E" class="button"> Google Drive </a>
+										<a href="https://mega.nz/#!cyp1FaRD!7ow6116JfP2GxTi-aEQys1_MCqAlQfxw8YB78cW-qIk" class="button"> MEGA </a>
+										<a href="https://www.solidfiles.com/v/Qkwz37WKBqD2D" class="button"> Solidfiles </a>
+										<a href="http://www109.zippyshare.com/v/Nogiy7Y0/file.html" class="button"> Zippyshare </a>
 										</p></li>
-										<li><a class="button">Episode - 2</a></li>
+										<!-- <li><a class="button">Episode - 2</a></li>
 										<br>
 										<p style="line-height: 0.02em;">
 										</p></li>
@@ -82,7 +84,7 @@
 										<li><a class="button">Episode - 12</a></li>
 										<br>
 										<p style="line-height: 0.02em;">
-										</p></li>
+										</p></li> -->
 										</center>
 									</ul>
 								</div>
