--- a/skirt-no-naka-wa-kedamono-deshita.html
+++ b/skirt-no-naka-wa-kedamono-deshita.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[Puella] Skirt no Naka wa Kedamono Desahita. | Archive</title>
+		<title>[Puella] Skirt no Naka wa Kedamono Deshita. | Archive</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,10 +24,10 @@
 								<li><a href="index.html" class="button scrolly"><< Menu Utama</a>
 								    <a href="summer2017.html" class="button scrolly"><< Summer 2017</a>
 							</ul>
-									<align="left"><h2>Skirt no Naka wa Kedamono Desahita. Subtitle Indonesia</h2>
+									<align="left"><h2>Skirt no Naka wa Kedamono Deshita. Subtitle Indonesia</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
-											<img border="0" src="https://myanimelist.cdn-dena.com/images/anime/13/86024l.jpg" />
+											<img border="0" src="https://myanimelist.cdn-dena.com/images/anime/4/86647l.jpg" />
 										</div>
 									
 									<hr width="100%">
