--- a/netsuzou-trap.html
+++ b/netsuzou-trap.html
@@ -27,14 +27,14 @@
 									<align="left"><h2>Netsuzou TRap Subtitle Indonesia</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
-											<img border="0" src="https://myanimelist.cdn-dena.com/images/anime/7/86668l.jpg" />
+											<img border="0" height="316" src="https://myanimelist.cdn-dena.com/images/anime/7/86668l.jpg" width="225" />
 										</div>
 									
 									<hr width="100%">
 									<ul class="actions">
 										<center>
 										<li><a class="button">Episode - 1</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8WlBsVEJBUHJTN0E" class="button"> Google Drive </a>
 										<a href="https://mega.nz/#!cyp1FaRD!7ow6116JfP2GxTi-aEQys1_MCqAlQfxw8YB78cW-qIk" class="button"> MEGA </a>
@@ -42,47 +42,47 @@
 										<a href="http://www109.zippyshare.com/v/Nogiy7Y0/file.html" class="button"> Zippyshare </a>
 										</p></li>
 										<!-- <li><a class="button">Episode - 2</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 3</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 4</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 5</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 6</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 7</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 8</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 9</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 10</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 11</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 12</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li> -->
 										</center>
