--- a/skirt-no-naka-wa-kedamono-deshita.html
+++ b/skirt-no-naka-wa-kedamono-deshita.html
@@ -27,7 +27,7 @@
 									<align="left"><h2>Skirt no Naka wa Kedamono Deshita. Subtitle Indonesia</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
-											<img border="0" src="https://myanimelist.cdn-dena.com/images/anime/4/86647l.jpg" />
+											<img border="0" height="316" src="https://myanimelist.cdn-dena.com/images/anime/4/86647l.jpg" width="225" />
 										</div>
 									
 									<hr width="100%">
@@ -36,53 +36,53 @@
 										<li><a class="button">Episode - 1</a></li>
 										<br>
 										<p style="line-height: 0.02em;">
-										<!-- <a href="#" class="button"> DDL </a>
-										<a href="#" class="button"> Torrent </a> -->
+										<a href="#" class="button"> Not Available Yet </a>
+										<a href="#" class="button"> Not Available Yet </a>
 										</p></li>
-										<li><a class="button">Episode - 2</a></li>
-										<br>
+								<!-- 	<li><a class="button">Episode - 2</a></li>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 3</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 4</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 5</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 6</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 7</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 8</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 9</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 10</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 11</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
 										</p></li>
 										<li><a class="button">Episode - 12</a></li>
-										<br>
+										<br><br>
 										<p style="line-height: 0.02em;">
-										</p></li>
+										</p></li> -->
 										</center>
 									</ul>
 								</div>
