--- a/skirt-no-naka-wa-kedamono-deshita.html
+++ b/skirt-no-naka-wa-kedamono-deshita.html
@@ -36,8 +36,10 @@
 										<li><a class="button">Episode - 1</a></li>
 										<br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> Not Available Yet </a>
-										<a href="#" class="button"> Not Available Yet </a>
+										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8cC1rY0FRVkFLQm8" class="button"> Google Drive </a>
+										<a href="https://mega.nz/#!EuZjhT7S!teylt1wV5nTaKbqDhEjm4tQ79mpHmXniwnPvhGKBQm8" class="button"> MEGA </a>
+										<a href="https://www.solidfiles.com/v/m35DZ6ARGvWzQ" class="button"> Solidfiles </a>
+										<a href="http://www93.zippyshare.com/v/yrEgLzDP/file.html" class="button"> Zippyshare </a>
 										</p></li>
 								<!-- 	<li><a class="button">Episode - 2</a></li>
 										<br><br>
