--- a/new-game-season-2.html
+++ b/new-game-season-2.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[Puella-AmeAgare] New Game!! Season 2 | Archive</title>
+		<title>[Puella-AmeAgare] New Game!! | Archive</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -27,7 +27,7 @@
 									<align="left"><h2>New Game!! Season 2 Subtitle Indonesia</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
-											<img border="0" height="316" src="https://myanimelist.cdn-dena.com/images/anime/4/85103l.jpg" width="225" />
+											<img border="0" height="316" src="https://myanimelist.cdn-dena.com/images/anime/4/86790l.jpg" width="225" />
 										</div>
 									
 									<hr width="100%">
