--- a/new-game-season-2.html
+++ b/new-game-season-2.html
@@ -24,7 +24,7 @@
 								<li><a href="index.html" class="button scrolly"><< Menu Utama</a>
 									<a href="summer2017.html" class="button scrolly"><< Summer 2017</a>
 							</ul>
-									<align="left"><h2>New Game!! Season 2 Subtitle Indonesia</h2>
+									<align="left"><h2>New Game!! Subtitle Indonesia</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
 											<img border="0" height="316" src="https://myanimelist.cdn-dena.com/images/anime/4/86790l.jpg" width="225" />
