--- a/summer2017.html
+++ b/summer2017.html
@@ -24,7 +24,7 @@
 							<li><a href="#">Status Rilisan <br>- Summer 2017</a></li>
 							<li><a href="#">Hajimete no Gal</a></li>
 							<li><a href="#">Netsuzou TRap</a></li>
-							<li><a href="#">New Game!! Season 2</a></li>
+							<li><a href="#">New Game!!</a></li>
 							<li><a href="#">Skirt no Naka wa Kedamono Deshita.</a></li>
 						</ul>
 					</nav>
@@ -54,7 +54,7 @@
 								<li>
 								<a href="http://puella.god.jp/hajimete-no-gal.html" a class="button scrolly">Hajimete No Gal</a>
 								<a href="http://puella.god.jp/netsuzou-trap.html" a class="button scrolly">Netsuzou TRap</a>
-								<a href="http://puella.god.jp/new-game-season-2.html" a class="button scrolly">New Game!! Season 2</a></li>
+								<a href="http://puella.god.jp/new-game-season-2.html" a class="button scrolly">New Game!!</a></li>
 								<a href="http://puella.god.jp/skirt-no-naka-wa-kedamono-deshita.html" a class="button scrolly">Skirt no Naka wa Kedamono Deshita.</a></li>
 							</ul>
 						</div>
