--- a/new-game-season-2.html
+++ b/new-game-season-2.html
@@ -36,10 +36,10 @@
 										<li><a class="button">Episode - 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="" class="button"> Filefenix </a>
-										<a href="" class="button"> Google Drive </a>
-										<a href="" class="button"> MEGA </a>
-										<a href="" class="button"> Solidfiles </a>
+										<a href="http://filefenix.com/mhtL/[PeA-Works]_New_Game!!_-_01_[B0E9E6AB].mkv" class="button"> Filefenix </a>
+										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8TER2eGJVLWpsOGs" class="button"> Google Drive </a>
+										<a href="https://mega.nz/#!dj4jxCrK!zfitATl_z5quo4Dqzu6W27AABAoxrlfGS3fPuPAA3Zk" class="button"> MEGA </a>
+										<a href="https://www.solidfiles.com/v/m3mg7DM2QBx3r" class="button"> Solidfiles </a>
 										</p></li>
 								<!-- 	<li><a class="button">Episode - 2</a></li>
 										<br><br>
