--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 								<a href="fall2016.html" class="button scrolly">Fall 2016 - Archive</a>
 								<a href="winter2017.html" class="button scrolly">Winter 2017 - Archive</a>
 								<a href="summer2017.html" class="button scrolly">Summer 2017 - Archive</a>
+								<a href="fall2017.html" class="button scrolly">Fall 2017 - Archive</a>
 								</li>
 							</ul>
 							<!-- <center><style type="text/css">
