--- a/osake-wa-fuufu-ni-natte-kara.html
+++ b/osake-wa-fuufu-ni-natte-kara.html
@@ -34,9 +34,9 @@
 										<center><li><a class="button">Episode - 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> Drive</a>
-										<a href="#" class="button"> MEGA</a> 
-										<a href="#" class="button"> PerpusIndo</a>
+										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8UFhTZTYyNGZEa1E" class="button"> Drive</a>
+										<a href="https://mega.nz/#!luR2xQDB!zg6NsvhQHUAD2L39loi3x62RYbrC3Iek5uiFkrda82Y" class="button"> MEGA</a> 
+										<a href="http://www.perpusindo.info/berkas/hwu3vfoh" class="button"> PerpusIndo</a>
                     </p></li></center>
 									</ul>
 									<!-- <ul class="actions">
