--- a/osake-wa-fuufu-ni-natte-kara.html
+++ b/osake-wa-fuufu-ni-natte-kara.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[PeA-Works] Osake wa Fuufu ni Natte Kara | Archive</title>
+		<title>[Puella] Osake wa Fuufu ni Natte Kara | Archive</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
