--- a/osake-wa-fuufu-ni-natte-kara.html
+++ b/osake-wa-fuufu-ni-natte-kara.html
@@ -16,7 +16,7 @@
 	<body>
 <!-- One -->
 				
-					<section id="akibas-trip.html" class="wrapper style2 spotlights">
+					<section id="osake-wa-fuufu-ni-natte-kara.html" class="wrapper style2 spotlights">
 						<section>
 							<div class="content">
 								<div class="inner">
