--- a/fall2017.html
+++ b/fall2017.html
@@ -23,6 +23,7 @@
 						<ul>
 							<li><a href="#">Status Rilisan <br>- Fall 2017</a></li>
 							<li><a href="#">Osake wa Fuufu ni Natte Kara</a></li>
+							<li><a href="#">Shoujo Shuumatsu Ryokou</a></li>
 						</ul>
 					</nav>
 										<li>	
@@ -50,6 +51,7 @@
 							<ul class="actions">
 								<li>
 								<a href="http://puella.god.jp/osake-wa-fuufu-ni-natte-kara.html" a class="button scrolly">Osake wa Fuufu ni Natte Kara</a></li>
+								<a href="http://puella.god.jp/shoujo-shuumatsu-ryokou.html" a class="button scrolly">Shoujo Shuumatsu Ryokou</a></li>
 							</ul>
 						</div>
 					</section>
