--- a/shoujo-shuumatsu-ryokou.html
+++ b/shoujo-shuumatsu-ryokou.html
@@ -34,18 +34,18 @@
 										<center><li><a class="button">Episode - 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> Drive</a>
-										<a href="#" class="button"> MEGA</a> 
-										<a href="#" class="button"> PerpusIndo</a>
+										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8TUVXYkx1R0NraUk" class="button"> Drive</a>
+										<a href="https://mega.nz/#!groXhb7D!l2WAhpZ-uY10fRaYnHWnt7EA8KjKG6vlEBX7FQit9W8" class="button"> MEGA</a> 
+										<a href="http://www.perpusindo.info/berkas/wzkd0e9m" class="button"> PerpusIndo</a>
                     </p></li></center>
 									</ul>
 									<!-- <ul class="actions">
 										<center><li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8UFhTZTYyNGZEa1E" class="button"> Drive </a>
-										<a href="https://mega.nz/#!luR2xQDB!zg6NsvhQHUAD2L39loi3x62RYbrC3Iek5uiFkrda82Y" class="button"> MEGA </a> 
-										<a href="http://www.perpusindo.info/berkas/hwu3vfoh" class="button"> PerpusIndo </a>
+										<a href="#" class="button"> Drive </a>
+										<a href="#" class="button"> MEGA </a> 
+										<a href="#" class="button"> PerpusIndo </a>
                     </p></li></center> -->
 									</ul>
 								</div>
