--- a/shoujo-shuumatsu-ryokou.html
+++ b/shoujo-shuumatsu-ryokou.html
@@ -35,7 +35,7 @@
 										<br><br>
 										<p style="line-height: 0.02em;">
 										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8TUVXYkx1R0NraUk" class="button"> Drive</a>
-										<a href="https://mega.nz/#!groXhb7D!l2WAhpZ-uY10fRaYnHWnt7EA8KjKG6vlEBX7FQit9W8" class="button"> MEGA</a> 
+										<a href="https://mega.nz/#!5yh23IBY!oiPDNZwTENkLke2tFpy8n5NfKNOlKqILPrDJVwYznCY" class="button"> MEGA</a> 
 										<a href="http://www.perpusindo.info/berkas/wzkd0e9m" class="button"> PerpusIndo</a>
                     </p></li></center>
 									</ul>
@@ -43,9 +43,9 @@
 										<center><li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="#" class="button"> Drive </a>
-										<a href="#" class="button"> MEGA </a> 
-										<a href="#" class="button"> PerpusIndo </a>
+										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8eHN5NTB3TlNMSDg" class="button"> Drive </a>
+										<a href="https://mega.nz/#!RyZkzCRa!oztV6qLDKxDRkyLM5Uz8gBxCoGhGB18BZ-oylYkTzFI" class="button"> MEGA </a> 
+										<a href="http://www.perpusindo.info/berkas/nzayxmwh" class="button"> PerpusIndo </a>
                     </p></li></center> -->
 									</ul>
 								</div>
