--- a/shoujo-shuumatsu-ryokou.html
+++ b/shoujo-shuumatsu-ryokou.html
@@ -39,14 +39,14 @@
 										<a href="http://www.perpusindo.info/berkas/wzkd0e9m" class="button"> PerpusIndo</a>
                     </p></li></center>
 									</ul>
-									<!-- <ul class="actions">
+										<ul class="actions">
 										<center><li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
 										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8eHN5NTB3TlNMSDg" class="button"> Drive </a>
 										<a href="https://mega.nz/#!RyZkzCRa!oztV6qLDKxDRkyLM5Uz8gBxCoGhGB18BZ-oylYkTzFI" class="button"> MEGA </a> 
 										<a href="http://www.perpusindo.info/berkas/nzayxmwh" class="button"> PerpusIndo </a>
-                    </p></li></center> -->
+                    </p></li></center>
 									</ul>
 								</div>
 							</div>
