--- a/shoujo-shuumatsu-ryokou.html
+++ b/shoujo-shuumatsu-ryokou.html
@@ -48,6 +48,15 @@
 										<a href="http://www.perpusindo.info/berkas/nzayxmwh" class="button"> PerpusIndo </a>
                     </p></li></center>
 									</ul>
+										<ul class="actions">
+										<center><li><a class="button">Episode - 3</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="https://drive.google.com/open?id=10una0Df0F3MhPhIfz-O7p4PDVWWZG1aH" class="button"> Drive </a>
+										<a href="https://mega.nz/#!R7ZkGDBa!P5cjx8mwdjmqyX80RPanZEkQ8QToS1aSyPO92Bjpv-I" class="button"> MEGA </a> 
+										<a href="http://www.perpusindo.info/berkas/ggmqfamf" class="button"> PerpusIndo </a>
+                    </p></li></center>
+									</ul>
 								</div>
 							</div>
 							</align>
